# rust-bitcoin

./: .actrc  .editorconfig  .gitattributes  .gitignore  .mkchlog.yml  .rustfmt.toml  .semgrepignore  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.lock.backup  Cargo.toml  Cross.toml  HOWTO.md  README.md  SECURITY.md  clippy.toml  flake.nix  justfile  liballow_test.rlib  libinline_allow_test.rlib  maintainer-tools-version  nightly-version  please use, from @caseyjwach  rbmt-version  rustfmt.toml  typos.toml
address/: Cargo.toml
address/src/: error.rs  lib.rs  serde_utils.rs  tests.rs
addresses/: CHANGELOG.md  Cargo.toml  README.md  rbmt.toml
addresses/src/: constants.rs  error.rs  lib.rs  witness_program.rs  witness_version.rs
base58/: CHANGELOG.md  Cargo.toml  README.md
base58/api/: all-features.txt  no-features.txt
base58/contrib/: extra_lints.sh  test.sh  test_vars.sh
base58/src/: checksum.rs  error.rs  hex.rs  internal_macros.rs  lib.rs
benches/: Cargo.toml  README.md  sighash_cache_benchmark.rs
benches/bitcoin/: block.rs  duplicate_inputs.rs  transaction.rs  witness.rs
benches/chacha20_poly1305/: chacha20.rs  chacha20poly1305.rs
benches/hashes/: cmp.rs  hash160.rs  hmac.rs  ripemd160.rs  sha1.rs  sha256.rs  sha256d.rs  sha384.rs  sha3_256.rs  sha512.rs  sha512_256.rs  siphash24.rs
bip158/: CHANGELOG.md  Cargo.toml  README.md  rbmt.toml
bip158/src/: lib.rs
bip32/: Cargo.toml
bip32/contrib/: test_vars.sh
bip32/src/: internal_macros.rs  lib.rs  serde_utils.rs
bitcoin/: CHANGELOG.md  Cargo.toml  build.rs  rbmt.toml
bitcoin-str/: Cargo.toml
bitcoin-str/src/: base58.rs  endian.rs  hex.rs  lib.rs
bitcoin/api/: all-features.txt  no-features.txt
bitcoin/contrib/: extra_tests.sh  test.sh  test_vars.sh  whitelist_deps.sh
bitcoin/embedded/: Cargo.toml  README.md
bitcoin/examples/: bip32.rs  brc20-inscription.rs  create-p2wpkh-address.rs  create_p2wpkh_address.rs  ecdsa-psbt-simple.rs  ecdsa-psbt.rs  handshake.rs  io.rs  musig2.rs  push-bytes.rs  rune.rs  script.rs  serde.rs  sighash.rs  sign-tx-p2tr.rs  sign-tx-p2wpkh.rs  sign-tx-segwit-v0.rs  sign-tx-taproot.rs  taproot-psbt-simple.rs  taproot-psbt.rs
bitcoin/fuzz/: Cargo.toml  cycle.sh  travis-fuzz.sh
bitcoin/src/: address.rs  amount.rs  array_vec.rs  base58.rs  bip143.rs  bip152.rs  bip158.rs  bip32.rs  blockdata.rs  compat.rs  consensus.rs  consensus_validation.rs  const_tools.rs  crypto.rs  error.rs  hash_types.rs  internal_macros.rs  io.rs  lib.rs  merkle_tree.rs  network.rs  output.rs  parse.rs  policy.rs  pow.rs  psbt.rs  serde_utils.rs  sighash.rs  sign_message.rs  string.rs  taproot.rs  test_macros.rs  util.rs  value.rs
bitcoin/test_data/: testnet_block_000000000000045e0b1660b6445b5e5c5ab63c9a4f956be7e1e69be04fa4497b.raw
bitcoin/tests/: bip143.rs  bip_174.rs  block.rs  consensus_validation.rs  crypto.rs  network.rs  params.rs  psbt-sign-taproot.rs  psbt.rs  serde.rs  serde_opcodes.rs
chacha20_poly1305/: CHANGELOG.md  Cargo.toml  README.md
chacha20_poly1305/contrib/: test_vars.sh
chacha20_poly1305/src/: benches.rs  chacha20.rs  lib.rs  poly1305.rs
ci/: Cargo.toml  README.md
ci/src/: main.rs
consensus-encoding/: Cargo.toml  README.md
consensus-encoding/contrib/: test_vars.sh
consensus-encoding/src/: decode.rs  encode.rs  lib.rs  primitives_impls.rs  units_impls.rs  varint.rs  vec.rs
consensus_encoding/: CHANGELOG.md  Cargo.toml  README.md  build.rs  rbmt.toml
consensus_encoding/api/: all-features.txt  alloc-only.txt  no-features.txt
consensus_encoding/contrib/: test_vars.sh
consensus_encoding/examples/: encoder.rs
consensus_encoding/src/: compact_size.rs  decode.rs  encode.rs  error.rs  hash.rs  impls.rs  lib.rs  serde_as_consensus.rs
consensus_encoding/tests/: api.rs  compact_size.rs  composition.rs  decode.rs  encode.rs  iter.rs  serde.rs  wrappers.rs
crypto/: CHANGELOG.md  Cargo.toml  README.md  build.rs  rbmt.toml
crypto/src/: ecdsa.rs  key.rs  lib.rs  sighash.rs  taproot.rs
dash/: Cargo.toml
dash/contrib/: test.sh
dash/embedded/: Cargo.toml  README.md
dash/examples/: bip32.rs  ecdsa-psbt.rs  handshake.rs  taproot-psbt.rs
dash/src/: address.rs  amount.rs  base58.rs  bip143.rs  bip152.rs  bip158.rs  bip32.rs  bls_sig_utils.rs  hash_types.rs  lib.rs  policy.rs  pow.rs  serde_utils.rs  sign_message.rs  signer.rs  string.rs  taproot.rs  test_macros.rs
dash/tests/: psbt.rs  serde.rs  serde_opcodes.rs
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs
error/: CHANGELOG.md  Cargo.toml  README.md
error/src/: input_string.rs  lib.rs
hashes/: CHANGELOG.md  Cargo.toml  README.md  rbmt.toml
hashes/api/: all-features.txt  alloc-only.txt  no-features.txt
hashes/contrib/: extra_tests.sh  sanitizer.sh  test.sh  test_vars.sh  wasm.sh
hashes/embedded/: Cargo.toml  README.md  memory.x
hashes/examples/: hash-a-file.rs  hash_newtype.rs  sha256t_hash_newtype.rs
hashes/fuzz/: Cargo.toml
hashes/src/: cmp.rs  compat.rs  error.rs  hash160.rs  hash_x11.rs  hex.rs  hkdf.rs  hmac.rs  impls.rs  internal_macros.rs  io_support.rs  lib.rs  macros.rs  ripemd160.rs  serde_macros.rs  sha1.rs  sha256.rs  sha256d.rs  sha256t.rs  sha384.rs  sha512.rs  sha512_256.rs  siphash24.rs  util.rs
hashes/tests/: api.rs  chunk_combinations.rs  io.rs  nist_cavp.rs  regression.rs  sha256t_hash_newtype.rs
hd_derivation/: CHANGELOG.md  Cargo.toml  README.md
hd_derivation/src/: lib.rs
hex/: Cargo.toml  README.md
hex/contrib/: test.sh
hex/examples/: hexy.rs
hex/src/: buf_encoder.rs  display.rs  lib.rs  parse.rs
internals/: CHANGELOG.md  Cargo.toml  README.md  build.rs  rbmt.toml
internals/contrib/: test.sh  (+1 more)
io/: CHANGELOG.md  Cargo.toml  README.md  build.rs  rbmt.toml
key_expression/: CHANGELOG.md  Cargo.toml  README.md
network/: CHANGELOG.md  Cargo.toml  README.md
p2p/: CHANGELOG.md  Cargo.toml  README.md  rbmt.toml
primitives/: CHANGELOG.md  Cargo.toml  README.md  rbmt.toml
psbt/: Cargo.toml
receive/: Cargo.toml  README.md
rust-bitcoin-derive/: Cargo.toml
taproot-primitives/: CHANGELOG.md  Cargo.toml  README.md
(+1224 files in other folders)
