[workspace]
members = ["bitcoin", "hashes", "internals", "fuzz"]

[workspace.metadata.rbmt.toolchains]
nightly = "nightly-2026-03-27"
stable = "1.91.1"

[patch.crates-io.bitcoin]
path = "bitcoin"

[patch.crates-io.bitcoin_hashes]
path = "hashes"

[patch.crates-io.bitcoin-internals]
path = "internals"
