[package]
name = "bitcoin-address"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
description = "Support for Bitcoin addresses"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "types"]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["internals/std", "bitcoin-primitives/crypto-std", "bitcoin-primitives/base58-std", "bitcoin-primitives/bech32-std"]
serde = ["actual-serde", "internals/serde", "bitcoin-primitives/crypto-serde"]

[dependencies]
hex_lit = "0.1.1"
internals = { package = "bitcoin-internals", version = "0.3.0", features = ["alloc"] }
bitcoin-primitives = { version = "0.1.0", default-features = false, features = ["crypto", "base58", "bech32"] }

# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0.103", default-features = false, features = [ "derive", "alloc" ], optional = true }

[dev-dependencies]
serde_json = "1.0.0"


[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)', 'cfg(fuzzing)', 'cfg(kani)', 'cfg(mutate)', 'cfg(rust_v_1_60)'] }
