[package]
name = "bitcoin-addresses"
version = "0.0.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
homepage = "https://rust-bitcoin.org"
description = "Bitcoin address"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "types"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "crypto/std", "internals/std", "primitives/std", "units/std"]
alloc = ["crypto/alloc", "internals/alloc", "primitives/alloc", "units/alloc"]

[dependencies]
crypto = { package = "bitcoin-crypto", path = "../crypto", version = "0.1.0", default-features = false, features = [] }
internals = { package = "bitcoin-internals", path = "../internals", version = "0.5.0", features = ["hex"] }
primitives = { package = "bitcoin-primitives", path = "../primitives", version = "0.102.0", default-features = false, features = ["hex"] }
units = { package = "bitcoin-units", path = "../units", version = "0.3.0", default-features = false, features = [] }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[package.metadata.rbmt.lint]
allowed_duplicates = [
    "hex-conservative",
]
