[package]
name = "bitcoin-addresses"
version = "0.0.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin"
homepage = "https://rust-bitcoin.org"
description = "Bitcoin address"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "types"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "base58/std", "bech32/std", "crypto/std", "hashes/std", "internals/std", "network/std", "primitives/std", "serde/std", "units/std"]
alloc = ["base58/alloc", "bech32/alloc", "crypto/alloc", "hashes/alloc", "internals/alloc", "network/alloc", "primitives/alloc", "serde/alloc", "units/alloc"]

[dependencies]
base58 = { package = "base58ck", path = "../base58", version = "0.4.0", default-features = false, features = [] }
bech32 = { version = "0.11.0", default-features = false, features = [] }
crypto = { package = "bitcoin-crypto", path = "../crypto", version = "0.1.0", default-features = false, features = [] }
hashes = { package = "bitcoin_hashes", path = "../hashes", version = "0.20.0", default-features = false, features = ["hex"] }
internals = { package = "bitcoin-internals", path = "../internals", version = "0.5.0", features = ["hex"] }
network = { package = "bitcoin-network-kind", path = "../network", version = "0.1.0", default-features = false, features = []}
primitives = { package = "bitcoin-primitives", path = "../primitives", version = "0.102.0", default-features = false, features = ["hex"] }
units = { package = "bitcoin-units", path = "../units", version = "0.3.0", default-features = false, features = [] }

serde = { version = "1.0.195", default-features = false, features = [ "derive" ], optional = true }

[dev-dependencies]
serde_json = "1.0.68"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[package.metadata.rbmt.lint]
allowed_duplicates = [
    "hex-conservative",
]
