[package]
name = "base58ck"
version = "0.2.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
description = "Bitcoin base58 encoding with checksum."
categories = ["cryptography::cryptocurrencies", "encoding"]
keywords = ["bitcoin", "base58", "encode", "decode", "checksum"]
readme = "README.md"
edition = "2021"
rust-version = "1.63.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "hashes/std", "internals/std", "hex-stable/std", "hex-unstable/std"]
alloc = ["hashes/alloc", "internals/alloc", "hex-stable/alloc", "hex-unstable/alloc"]

[dependencies]
hashes = { package = "bitcoin_hashes", version = "0.16.0", default-features = false }
internals = { package = "bitcoin-internals", version = "0.4.0" }

[dev-dependencies]
hex-unstable = { package = "hex-conservative", version = "0.4.0", git = "https://github.com/tcharding/hex-conservative", branch = "02-24-release-0.4", default-features = false }
hex-stable = { package = "hex-conservative", version = "1.0.0-alpha.0", git = "https://github.com/tcharding/hex-conservative", branch = "02-24-release-1.0-alpha.0", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)', 'cfg(fuzzing)', 'cfg(kani)' ] }
