[package]
name = "base58ck"
version = "0.3.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
description = "Bitcoin base58 encoding with checksum."
categories = ["cryptography::cryptocurrencies", "encoding"]
keywords = ["bitcoin", "base58", "encode", "decode", "checksum"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "hashes/std", "internals/std"]
alloc = ["hashes/alloc", "internals/alloc"]

[dependencies]
hashes = { package = "bitcoin_hashes", path = "../hashes", version = "0.19.0", default-features = false }
internals = { package = "bitcoin-internals", path = "../internals", version = "0.5.0" }

[dev-dependencies]
hex = { package = "hex-conservative", version = "0.3.2" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)', 'cfg(fuzzing)', 'cfg(kani)' ] }

[lints.clippy]
redundant_clone = "warn"
use_self = "warn"
