[package]
name = "bip32"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
description = "Implementation of BIP32 hierarchical deterministic wallets"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "bip-32", "bip32"]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"
exclude = ["tests", "contrib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [ "std" ]
std = ["internals/std", "primitives/crypto-std", "primitives/base58-std"]
serde = ["actual-serde", "internals/serde", "primitives/crypto-serde"]

[dependencies]
internals = { package = "bitcoin-internals", version = "0.3.0", features = ["alloc"] }
primitives = { package = "bitcoin-primitives", version = "0.1.0", default-features = false, features = ["crypto", "base58"] }

# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0.103", default-features = false, features = [ "derive", "alloc" ], optional = true }

[dev-dependencies]
serde_json = "1.0.0"
