[package]
name = "bitcoin-str"
version = "0.28.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "The Rust Bitcoin developers"]
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoin/"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
documentation = "https://docs.rs/bitcoin/"
description = "Bitcoin stringly encodings."
keywords = ["crypto", "bitcoin"]
readme = "README.md"
edition = "2018"

# Please don't forget to add relevant features to docs.rs below.
[features]
default = ["std"]
std = []
alloc = ["core2/alloc"]
# We use explicit std/alloc features for optional dependencies.
bech32-std = ["bech32/std"]
base64-std = ["base64/std"]
base64-alloc = ["base64/alloc"]

[package.metadata.docs.rs]
features = ["std", "alloc"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

# Only enable this if you explicitly want no-defaul-features, otherwise use "bech32-std".
bech32 = { version = "0.9.0", default_features = false, optional = true }

# Only enable this if you explicitly want no-defaul-features, otherwise use "base64-std" or "base64-alloc".
base64 = { version = "0.13.0", default-features = false, optional = true }

# Only enable this if you explicitly do not want to use an allocator, otherwise enable "alloc".
core2 = { version = "0.3.0", default_features = false, optional = true }

[dev-dependencies]
