[package]
name = "bitcoin"
# We jumped to `v0.32.100` when doing the MSRV bump to Rust `1.74`
# leaving room for a bunch of secuity releases upto this number if
# needed.
version = "0.32.100"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
documentation = "https://docs.rs/bitcoin/"
description = "General purpose library for using and interoperating with Bitcoin."
categories = ["cryptography::cryptocurrencies"]
keywords = [ "crypto", "bitcoin" ]
readme = "../README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["api", "tests", "contrib"]

[features]
default = [ "std", "secp-recovery" ]
std = ["base58/std", "bech32/std", "hashes/std", "hex/std", "io/std", "secp256k1/std", "units/std"]
rand-std = ["secp256k1/rand-std", "std"]
rand = ["secp256k1/rand"]
serde = ["actual-serde", "hashes/serde", "secp256k1/serde", "units/serde"]
encoding = ["dep:encoding", "units/encoding"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]
bitcoinconsensus-std = ["bitcoinconsensus/std", "std"]
arbitrary = ["actual-arbitrary", "units/arbitrary"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base58 = { package = "base58ck", version = "0.1.100", default-features = false }
bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
hashes = { package = "bitcoin_hashes", version = "0.14.100", default-features = false, features = ["alloc", "io"] }
hex = { package = "hex-conservative", version = "0.2.2", default-features = false, features = ["alloc"] }
hex_lit = "0.1.1"
io = { package = "bitcoin-io", version = "0.1.100", default-features = false, features = ["alloc"] }
secp256k1 = { version = "0.29.0", default-features = false, features = ["hashes", "alloc"] }
units = { package = "bitcoin-units", path = "../units", version = "0.1.100", default-features = false, features = ["alloc"] }

base64 = { version = "0.21.3", optional = true }
encoding = { package = "bitcoin-consensus-encoding", version = "1.0", default-features = false, optional = true }
ordered = { version = "0.2.0", optional = true }
# Only use this feature for no-std builds, otherwise use bitcoinconsensus-std.
bitcoinconsensus = { version = "0.105.0+25.1", default-features = false, optional = true }

# Do NOT use this as a feature! Use the `serde` feature instead.
actual-serde = { package = "serde", version = "1.0.130", default-features = false, features = [ "derive", "alloc" ], optional = true }

# Do NOT use this as a feature! Use the `arbitrary` feature instead.
actual-arbitrary = { package = "arbitrary", version = "1.0.1", optional = true }

[dev-dependencies]
serde_json = "1.0.68"
serde_test = "1.0.19"
bincode = "1.3.1"

[[example]]
name = "bip32"

[[example]]
name = "handshake"
required-features = ["std", "rand-std"]

[[example]]
name = "ecdsa-psbt"
required-features = ["std", "bitcoinconsensus"]

[[example]]
name = "sign-tx-segwit-v0"
required-features = ["std", "rand-std"]

[[example]]
name = "sign-tx-taproot"
required-features = ["std", "rand-std"]

[[example]]
name = "taproot-psbt"
required-features = ["std", "rand-std", "bitcoinconsensus"]

[[example]]
name = "sighash"

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)', 'cfg(fuzzing)', 'cfg(kani)', 'cfg(mutate)', 'cfg(rust_v_1_60)', 'cfg(rust_v_1_61)', 'cfg(rust_v_1_64)'] }

[package.metadata.rbmt.api]
enabled = true

[package.metadata.rbmt.test]
examples = [
    "sign-tx-segwit-v0:std rand-std",
    "sign-tx-taproot:std rand-std",
    "sighash:std",
]
exact_features = [
    ["bitcoinconsensus", "secp-recovery", "base64", "serde"],
    ["std", "bitcoinconsensus-std", "secp-recovery", "base64", "serde"],
]
