[package]
name = "chacha20-poly1305"
version = "0.1.2"
authors = ["Nick Johnson <nick@yonson.dev>", "Robert Netzke <rustaceanrob@protonmail.com>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
description = "The ChaCha20 stream cipher and Poly1305 MAC based AEAD."
categories = ["cryptography"]
keywords = ["crypto", "encryption"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dev-dependencies]
hex = { package = "hex-conservative", version = "0.3.2", default-features = false, features = ["alloc"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(bench)'] }

[lints.clippy]
redundant_clone = "warn"
use_self = "warn"
