[package]
name = "bitcoin-consensus-encoding"
version = "0.0.1-preview"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
description = "Traits and tools for consensus-encoding/decoding Bitcoin types"
categories = ["cryptography::cryptocurrencies"]
keywords = [ "bitcoin", "consensus", "encoding", "decoding" ]
readme = "../README.md"
edition = "2021"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "push_decode/std"]
alloc = ["push_decode/alloc"]

[dependencies]
push_decode = { version = "0.4" }
