[package]
name = "bitcoin-consensus-encoding"
version = "1.0.0-rc.3"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "Nick Johnson <nick@yonson.dev>", "Tobin C. Harding <me@tobin.cc>"]
license = "CC0-1.0"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
description = "Consensus encoding and decoding"
categories = ["cryptography::cryptocurrencies"]
keywords = ["bitcoin", "no-std"]
readme = "README.md"
edition = "2021"
rust-version = "1.74.0"
exclude = ["tests", "contrib"]

[features]
default = ["std"]
std = ["alloc", "internals/std"]
alloc = ["internals/alloc"]

[dependencies]
internals = { package = "bitcoin-internals", path = "../internals", version = "0.5.0" }

[dev-dependencies]
hex = { package = "hex-conservative", version = "0.3.2" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "encoder"
required-features = ["alloc"]

[lints]
workspace = true
